--- a/build.gradle
+++ b/build.gradle
@@ -17,6 +17,7 @@ repositories {
 dependencies {
     testImplementation 'org.junit.jupiter:junit-jupiter:5.8.2'
     implementation 'org.seleniumhq.selenium:selenium-java:3.141.59'
+    implementation 'io.github.bonigarcia:webdrivermanager:5.1.0'
 }
 
 test {
